<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- COMMON -->
    <string name="app_name">HRM</string>
    <string name="app_name_full">Human Resource Manager</string>
    <string name="home">Home</string>
    <string name="main_screen">MainScreen</string>
    <string name="splash_screen">SplashScreen</string>
    <string name="cat_people">People</string>
    <string name="cat_projects">Projects</string>
    <string name="cat_positions">Positions</string>
    <string name="cat_interviews">Interviews</string>
    <string name="actionbar_activity_not_found">Failed to open intent </string>
    <string name="app_exit">Exit</string>
    <string name="app_exit_mess">Do you really want to exit?</string>
    <string name="empty">Empty</string>

    <!-- LOGIN -->
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="logon">Log On</string>
    <string name="login_check">Remain in the system</string>
    <string name="err_login">Login is incorrect</string>
    <string name="err_password">Password is incorrect</string>

    <!-- DIALOG -->
    <string name="dlg_error">Error</string>
    <string name="dlg_warning">Warning</string>
    <string name="dlg_info">Info</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

     <!-- SPINNER -->
    <string name="sp_none">None</string>
    
    <!-- APPLICATION MENU -->
    <string name="menu_preferences">Preferences</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_logout_title">Do you really want to log out?</string>
    <string name="menu_search">Search</string>

    <!-- PEFERENCES -->
    <string name="pref_preferences">Preferences</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_authorization">Authorization</string>
    <string name="pref_authorization_chbx">Save the authorization user data?</string>
    <string name="pref_interface">Interface</string>
    <string name="pref_theme_summury">Theme description</string>
    <string name="pref_interface_summury">Interface description</string>
    <string name="pref_text_size">Text Size</string>
    <string name="pref_text_size_description">Enter the font size </string>
    <string name="pref_text_size_entered">Text Size in Enter field</string>
    <string name="pref_text_size_entered_description">Enter the font size of entered text</string>
    <string name="pref_connection">Connection</string>

    <!-- PEOPLE -->
    <string name="people_name">Name</string>
    <string name="people_name_title">Name:</string>
    <string name="people_lastname">Lastname</string>
    <string name="people_lastname_title">Lastname:</string>
    <string name="people_pr_mail">Primary email</string>
    <string name="people_pr_mail_title">Primery email:</string>
    <string name="people_facility">Facility</string>
    <string name="people_facility_title">Facility:</string>
    <string name="people_show_dialog">Show \"Create interview\" dialog?</string>
    <string name="people_facility_od">KM-Ware OD</string>
    <string name="people_facility_zp">KM-Ware ZP</string>
    <string name="people_err_name">Enter a name</string>
    <string name="people_err_enter">Fill in all fields</string>
    
    <string name="people_position">Position</string>
    <string name="people_position_title">Position:</string>
    <string name="people_projects">Projects</string>
    <string name="people_projects_title">Projects:</string>
    <string name="people_date_in">Employment date</string>
    <string name="people_date_out">Termination date</string>
    <string name="people_active_emp">Active employee</string>
    <string name="people_contacts">Contacts</string>
    <string name="people_email">E-mail</string>
    <string name="people_email_title">E-mail:</string>
    <string name="people_skype">Skype</string>
    <string name="people_skype_title">Skype:</string>
    <string name="people_tel">Phone</string>
    <string name="people_tel_title">Phone:</string>
    <string name="people_status">Status</string>
    <string name="people_status_title">Status:</string>
    <string name="people_status_available">Available</string>
    <string name="people_status_assigned">Assigned</string>
    <string name="people_status_terminated">Terminated</string>
    <string name="people_status_unavailable">Unavailable</string>
    <string name="people_status_staff">Staff</string>
    <string name="people_status_wait_int">Waiting for interview</string>
    <string name="people_info">Information:</string>
    <string name="people_candidate">Candidate</string>
    <string name="people_employee">Person</string>
    <string name="people_add">Add Person</string>
    <string name="people_edit">Edit people</string>
    <string name="people_role">Role</string>
    <string name="people_role_administartor">Administrator</string>
    <string name="people_role_employee">Employee</string>
    <string name="people_role_hrmanager">HR Manager</string>
    <string name="people_role_interviewer">Interviewer</string>
    <string name="people_role_add">Enter the role</string>
    <string name="people_pswrd">Reset Password</string>
    

    <!-- PROJECT -->
    <string name="project_title">Title:</string>
    <string name="project_customer_title">Customer:</string>
    <string name="project_discription_title">Discription:</string>
    <string name="project_name">Project name</string>
    <string name="project_name_title">Project name:</string>
    <string name="project_contacts">Contact details</string>
    <string name="project_email">E-mail</string>
    <string name="project_email_title">E-mail:</string>
    <string name="project_skype">Skype</string>
    <string name="project_skype_title">Skype:</string>
    <string name="project_tel">Phone</string>
    <string name="project_tel_title">Phone:</string>
    <string name="project_start_date">Start date</string>
    <string name="project_start_date_title">Start date:</string>
    <string name="project_end_date">End date</string>
    <string name="project_end_date_title">End date:</string>
    <string name="project_employments">Employmentes</string>
    <string name="project_employments_title">Employmentes:</string>
    <string name="project_status">Status</string>
    <string name="project_add">Add project</string>
    <string name="project_edit">Edit project</string>
    <string name="project_error_name">Fill in the fields</string>
    <string name="project_error_date">End date is less than the start date</string>
    

    <!-- STATUS OF PROJECT -->
    <string name="status_expected">Expected</string>
    <string name="status_open">Open</string>
    <string name="status_close">Close</string>
    <string name="status_compleded">Completed</string>
    <string name="status_delayed">Delayed</string>

    <!-- POSITION -->
    <string name="position_title">Title</string>
    <string name="position_title_view">Title:</string>
    <string name="position_work_load">Required work load</string>
    <string name="position_work_load_view">Required work load:</string>
    <string name="position_departments">Departments</string>
    <string name="position_departments_view">Departments:</string>
    <string name="position_projects">Projects</string>
    <string name="position_project">Project:</string>
    <string name="position_description">Description</string>
    <string name="position_description_view">Description:</string>
    
    <string name="position_name">Position name</string>
    <string name="position_name_title">Position name:</string>
    <string name="position_enter_name">Enter a position name</string>
    <string name="position_enter_description">Enter a description of position</string>
    <string name="position_add">Add position</string>
    <string name="position_edit">Edit position</string>

    <!-- INTERVIEW -->
    <string name="interview_add">Arrange interview</string>
    <string name="interview_title">Title</string>
    <string name="interview_title_view">Title:</string>
    <string name="interview_candidate">Candidate</string>
    <string name="interview_candidate_view">Candidate:</string>
    <string name="interview_status">Status</string>
    <string name="interview_status_view">Status:</string>
    <string name="interview_status_pending">Pending</string>
    <string name="interview_status_approved">Approved</string>
    <string name="interview_status_rejected">Rejected</string>
    
    <string name="interview_date">Date</string>
    <string name="interview_time">Time</string>
    <string name="interview_position">Position</string>
    <string name="interview_description">Description</string>
    
    <string name="interview_project">Project</string>
    <string name="interview_interviewer">Name of interviewer</string>
    <string name="interview_phone">Phone</string>
    <string name="interview_edit">Edit Interview</string>
    <string name="interview_info">Information:</string>

    <!-- INTERVIEW GUEST -->
    <string name="guest_name">Name:</string>
    <string name="guest_phone">Phone:</string>
    <string name="guest_project">Project:</string>
    <string name="guest_position">Position:</string>
    <string name="guest_date">Date:</string>
    <string name="guest_time">Time:</string>
    <string name="guest_address">Address:</string>
    <string name="guest_description">Description:</string>
    <string name="guest_testAddr">Ukraine\nOdessa\nPushkinska str. 32\nOffice №2</string>

    <!-- MENU -->
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_settings">Settings</string>

    <!-- ABOUT -->
    <string name="about_version">Version:</string>
    <string name="about_developed">Developed:</string>
    <string name="about_license">License agreement</string>
    
</resources>