<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_interviewer_name"
                style="@style/text.small"
                android:text="@string/interview_title" />

            <EditText
                android:id="@+id/edt_interview_name"
                style="@style/edit_text.singleline"
                android:ems="10"
                android:inputType="textPersonName" >
            </EditText>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:weightSum="2" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_interview_date"
                        style="@style/text.small"
                        android:text="@string/interview_date" />

                    <Button
                        android:id="@+id/btn_interview_date"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_interview_time"
                        style="@style/text.small"
                        android:text="@string/interview_time" />

                    <Button
                        android:id="@+id/btn_interview_time"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
            
            <TextView
                android:id="@+id/tv_interview_project"
                style="@style/text.small"
                android:text="@string/interview_candidate" />

            <Button
                android:id="@+id/btn_interview_candidate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sp_none" />

            <TextView
                android:id="@+id/tv_interview_position"
                style="@style/text.small"
                android:text="@string/interview_position" />

            <Button
                android:id="@+id/btn_interview_position"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sp_none" />

            <TextView
                android:id="@+id/tc_interview_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interview_status" />

            <Spinner
                android:id="@+id/sp_interview_status"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                tools:listitem="@android:layout/simple_spinner_item" />

            <LinearLayout
                android:id="@+id/ll_interview_participants"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>