<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_project_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_name" />

    <EditText
        android:id="@+id/edt_project_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:singleLine="true" >
    </EditText>

    <TextView
        android:id="@+id/tv_project_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_status" />

    <Spinner
        android:id="@+id/sp_project_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/status"
        android:prompt="@string/project_status"
        tools:listitem="@android:layout/simple_spinner_item" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/ll_project_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_project_contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_contacts" />

            <EditText
                android:id="@+id/edt_project_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/project_email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edt_project_tel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/projecte_tel"
                android:inputType="phone"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edt_skype"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/project_skype"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_project_start_date"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/project_start_date" />

                    <EditText
                        android:id="@+id/edt_project_start_date"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="date" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_project_end_date"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/project_end_date" />

                    <EditText
                        android:id="@+id/edt_project_end_date"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="date" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_project_employee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_employments" />

            <ListView
                android:id="@+id/lv_project_employee"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                tools:listitem="@android:layout/simple_list_item_2" >
            </ListView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>