<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/main_blue"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".SplashScreen" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.6"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1" >

        <EditText
            android:id="@+id/etLogin"
            style="@style/main_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_name" 
            />

        <LinearLayout
            android:layout_width="1dip"
            android:layout_height="1dip"
            android:layout_weight="0.1" >
        </LinearLayout>

        <EditText
            android:id="@+id/etPassword"
            style="@style/main_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="1dip"
            android:layout_height="1dip"
            android:layout_weight="0.1" >
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            style="@style/main_orange"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/logon" />
    </LinearLayout>

</LinearLayout>