<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip" 
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_version" />

                <TextView
                    android:id="@+id/tv_about_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 1.0" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/mane_orange" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_developed" />

                <TextView
                    android:id="@+id/tv_about_developed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" KM-Ware OD" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/mane_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:text="@string/about_license" />

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/footer_layout" />

</LinearLayout>